<resources>
    <string name="app_name">ToDo-Note</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="name">Name</string>
    <string name="username_or_email">Username or Email</string>
    <string name="preference_file_key">UserPrefs</string>
    <string name="token">TOKEN</string>
    <string name="due_date">Due Date</string>
    <string name="reminder">Reminder</string>
    <string name="don_t_remind_me">Don\'t remind me</string>
    <string name="priority">Priority</string>
    <string name="none">None</string>
    <string name="highlight">Highlight</string>
    <string name="make_this_task_stand_out_in_the_list_view">Make this task stand out in the list view</string>
    <string name="task_name">Task name</string>
    <string name="no_reminder_set">No reminder set</string>
    <string name="completed">Completed</string>
    <string name="reminder_type">Reminder Type</string>
    <string name="todo">Todo</string>
    <string name="remind_me_when_due">Remind me when due</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
</resources>