<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.activedev.todo_note.signin.SigninViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="com.activedev.todo_note.MainActivity">

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@drawable/back_signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/noteImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_note" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/noteImg"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="30dp"
                android:fontFamily="@font/tello_stick"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                android:textSize="27sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:text="@={viewModel.username}"
                android:background="@drawable/edt_sigin"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="20sp"
                android:elevation="5dp"
                android:fontFamily="@font/the_raink"
                android:hint="@string/username"
                android:padding="15dp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edt_sigin"
                android:drawableStart="@drawable/ic_email"
                android:text="@={viewModel.email}"
                android:drawablePadding="20sp"
                android:elevation="5dp"
                android:fontFamily="@font/the_raink"
                android:hint="@string/email"
                android:padding="15dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edt_sigin"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="20sp"
                android:text="@={viewModel.password}"
                android:elevation="5dp"
                android:fontFamily="@font/the_raink"
                android:hint="@string/password"
                android:padding="15dp" />

            <TextView
                android:id="@+id/forgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/the_raink"
                android:text="@string/forgot_password"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSigin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/back_button"
            android:elevation="7dp"
            android:fontFamily="@font/the_raink"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="@{(v) -> viewModel.onButtonClick(v)}"
            app:layout_constraintBottom_toTopOf="@+id/haveAcc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/haveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/the_raink"
                android:text="@string/have_an_account"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/button2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/the_raink"
                android:text="@string/login"
                android:textColor="#F85656"
                android:textSize="15sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/button2" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>