<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".todo.EditTodoFragment"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop">

            <ImageButton
                android:id="@+id/deleteTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="25dp"
                android:background="@drawable/ic_delete" />

            <ImageButton
                android:id="@+id/shareTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_share" />

        </com.google.android.material.appbar.MaterialToolbar>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="30dp"
                android:hint="@string/task_name"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <ImageView
                android:id="@+id/imgDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/ic_date" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/imgDate"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/due_date"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDate"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/imgDate"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/no_reminder_set"
                android:textSize="14sp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rlDueDate">

            <ImageView
                android:id="@+id/imgPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/ic_reminder_off" />

            <TextView
                android:id="@+id/txtPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/imgPriority"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/reminder"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPriority"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/imgPriority"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/don_t_remind_me"
                android:textSize="14sp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlReminder">

            <ImageView
                android:id="@+id/imgReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/ic_flag" />

            <TextView
                android:id="@+id/txtReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/imgReminder"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/priority"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtReminder"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/imgReminder"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/none"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlIsFavored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlPriority">

            <ImageView
                android:id="@+id/imgHighlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/ic_star_off" />

            <TextView
                android:id="@+id/txtHighlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/imgHighlight"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/highlight"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtHighlight"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/imgHighlight"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/make_this_task_stand_out_in_the_list_view"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlIsDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlIsFavored">

            <ImageView
                android:id="@+id/imgDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/ic_not_done" />

            <TextView
                android:id="@+id/txtDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/imgDone"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/completed"
                android:textSize="18sp" />


        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>